# minimum_jerk_controller

./: CMakeLists.txt  README.md  package.xml  vcpkg.json
.github/workflows/: build.yml
etc/: MinimumJerkController.in.yaml
include/mc_tasks/: MinimumJerkEndEffectorTask.h
src/: CMakeLists.txt  MinimumJerkController.cpp  MinimumJerkController.h  api.h  lib.cpp
src/mc_tasks/: MinimumJerkEndEffectorTask.cpp
src/states/: CMakeLists.txt  MinimumJerkController_EETask.cpp  MinimumJerkController_EETask.h  MinimumJerkController_Fitts.cpp  MinimumJerkController_Fitts.h  MinimumJerkController_Initial.cpp  MinimumJerkController_Initial.h  MinimumJerkController_Switch.cpp  MinimumJerkController_Switch.h  MinimumJerkController_TestJacDot.cpp  MinimumJerkController_TestJacDot.h  MinimumJerkController_Torque.cpp  MinimumJerkController_Torque.h
tests/: CMakeLists.txt
tests/etc/: mc_rtc.yaml
